fixes overlap of .tech-grid on 1000px + screens

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ main {
   grid-template-rows: auto;
   gap: 1.5rem;
   margin: auto;
+  flex: 1;
 }
 
 h1,
@@ -141,6 +142,10 @@ footer p:last-of-type {
 }
 
 @media (min-width: 760px) {
+  body {
+    min-height: 100vh;
+  }
+
   main {
     max-width: 90%;
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -205,7 +210,8 @@ footer p:last-of-type {
 
 @media (min-width: 1000px) {
   main {
-    max-width: 70%;
+    max-width: 70vw;
+
   }
 
   .who-am-i {
@@ -221,12 +227,16 @@ footer p:last-of-type {
   .exploring-tech {
     grid-column: 1 / 2;
     grid-row: 3 / 6;
+    overflow-y: auto;
+    align-content: start;
   }
 
   .tech-grid {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     grid-auto-flow: row;
+    /* override the tablet styles */
+    grid-auto-columns: unset;
   }
 
   .heading {
@@ -253,8 +263,8 @@ footer p:last-of-type {
   }
 
   .coding-journey {
-    grid-column: 2/4;
-    grid-row: 4/6
+    grid-column: 2 / 4;
+    grid-row: 4 / 6
   }
 
   .divider {
